log/run1/hpctoolkit-2021.05.15-papi-experiment.err
==> Warning: Missing a source id for papi@master
==> Error: ProcessError: Command exited with status 2:
    'make' '-j2' 'V=1'

5 errors found in build log:
     375    make[1]: Entering directory `/tmp/sochat1/spack-stage/spack-stage-p
            api-5.3.0-g6wjbfjna3i6imkfhcl64shnm53v6mtk/spack-src/src/libpfm4'
     376    make -C lib
     377    make[2]: Entering directory `/tmp/sochat1/spack-stage/spack-stage-p
            api-5.3.0-g6wjbfjna3i6imkfhcl64shnm53v6mtk/spack-src/src/libpfm4/li
            b'
     378    /p/vast1/build/spack/lib/spack/env/gcc/gcc  -Wno-override-init  -g 
            -Wall -Werror -Wextra -Wno-unused-parameter -I. -I/tmp/sochat1/spac
            k-stage/spack-stage-papi-5.3.0-g6wjbfjna3i6imkfhcl64shnm53v6mtk/spa
            ck-src/src/libpfm4/lib/../include -DCONFIG_PFMLIB_DEBUG -DCONFIG_PF
            MLIB_OS_LINUX -D_REENTRANT -I. -DCONFIG_PFMLIB_ARCH_X86 -DCONFIG_PF
            MLIB_ARCH_X86_64 -I. -c pfmlib_perf_event_pmu.c
     379    /p/vast1/build/spack/lib/spack/env/gcc/gcc  -Wno-override-init  -g 
            -Wall -Werror -Wextra -Wno-unused-parameter -I. -I/tmp/sochat1/spac
            k-stage/spack-stage-papi-5.3.0-g6wjbfjna3i6imkfhcl64shnm53v6mtk/spa
            ck-src/src/libpfm4/lib/../include -DCONFIG_PFMLIB_DEBUG -DCONFIG_PF
            MLIB_OS_LINUX -D_REENTRANT -I. -DCONFIG_PFMLIB_ARCH_X86 -DCONFIG_PF
            MLIB_ARCH_X86_64 -I. -c pfmlib_intel_wsm.c
     380    pfmlib_perf_event_pmu.c: In function 'gen_tracepoint_table':
  >> 381    pfmlib_perf_event_pmu.c:349:36: error: '%s' directive output may be
             truncated writing up to 255 bytes into a region of size between 0 
            and 4095 [-Werror=format-truncation=]
     382      349 |   snprintf(d2path, MAXPATHLEN, "%s/%s", debugfs_mnt, d1->d_
            name);
     383          |                                    ^~
     384    pfmlib_perf_event_pmu.c:349:3: note: 'snprintf' output between 2 an
            d 4352 bytes into a destination of size 4096
     385      349 |   snprintf(d2path, MAXPATHLEN, "%s/%s", debugfs_mnt, d1->d_
            name);
     386          |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            ~~~~~
  >> 387    pfmlib_perf_event_pmu.c:399:58: error: '%s' directive output may be
             truncated writing up to 255 bytes into a region of size between 0 
            and 4095 [-Werror=format-truncation=]
     388      399 |                         snprintf(idpath, MAXPATHLEN, "%s/%s
            /id", d2path, d2->d_name);
     389          |                                                          ^~
     390    pfmlib_perf_event_pmu.c:399:25: note: 'snprintf' output between 5 a
            nd 4355 bytes into a destination of size 4096
     391      399 |                         snprintf(idpath, MAXPATHLEN, "%s/%s
            /id", d2path, d2->d_name);
     392          |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            ~~~~~~~~~~~~~~~~~~~~~~~~~
     393    /p/vast1/build/spack/lib/spack/env/gcc/gcc  -Wno-override-init  -g 
            -Wall -Werror -Wextra -Wno-unused-parameter -I. -I/tmp/sochat1/spac
            k-stage/spack-stage-papi-5.3.0-g6wjbfjna3i6imkfhcl64shnm53v6mtk/spa
            ck-src/src/libpfm4/lib/../include -DCONFIG_PFMLIB_DEBUG -DCONFIG_PF
            MLIB_OS_LINUX -D_REENTRANT -I. -DCONFIG_PFMLIB_ARCH_X86 -DCONFIG_PF
            MLIB_ARCH_X86_64 -I. -c pfmlib_intel_snb.c
     394    cc1: all warnings being treated as errors
  >> 395    make[2]: *** [pfmlib_perf_event_pmu.o] Error 1
     396    make[2]: *** Waiting for unfinished jobs....
     397    make[2]: Leaving directory `/tmp/sochat1/spack-stage/spack-stage-pa
            pi-5.3.0-g6wjbfjna3i6imkfhcl64shnm53v6mtk/spack-src/src/libpfm4/lib
            '
  >> 398    make[1]: *** [lib] Error 2
     399    make[1]: Leaving directory `/tmp/sochat1/spack-stage/spack-stage-pa
            pi-5.3.0-g6wjbfjna3i6imkfhcl64shnm53v6mtk/spack-src/src/libpfm4'
  >> 400    make: *** [/tmp/sochat1/spack-stage/spack-stage-papi-5.3.0-g6wjbfjn
            a3i6imkfhcl64shnm53v6mtk/spack-src/src/libpfm4/lib/libpfm.a] Error 
            2

See build log for details:
  /var/tmp/sochat1/spack-stage/spack-stage-papi-5.3.0-g6wjbfjna3i6imkfhcl64shnm53v6mtk/spack-build-out.txt

Making predictions for symbolator
Making predictions for libabigail
Making predictions for actual
/var/spool/slurmd/job100456/slurm_script: line 12: 12373 Killed                  spliced splice --package hpctoolkit@2021.05.15 --splice papi --runner spack --replace papi --experiment experiment --outfile /p/vast1/build/spliced-experiment/results/hpctoolkit/2021.05.15/papi/experiment.json
Traceback (most recent call last):
  File "/p/vast1/build/anaconda3/bin/spliced", line 11, in <module>
    load_entry_point('spliced', 'console_scripts', 'spliced')()
  File "/p/vast1/build/spliced/spliced/client/__init__.py", line 228, in run_spliced
    main(args=args, parser=parser, extra=extra, subparser=helper)
  File "/p/vast1/build/spliced/spliced/client/splice.py", line 14, in main
    run_spack_experiment(args, command=" ".join(extra))
  File "/p/vast1/build/spliced/spliced/client/splice.py", line 40, in run_spack_experiment
    experiment.run()
  File "/p/vast1/build/spliced/spliced/experiment/spack.py", line 46, in run
    spec_main = Spec(self.package).concretized()
  File "/p/vast1/build/spack/lib/spack/spack/spec.py", line 2684, in concretized
    clone.concretize(tests=tests)
  File "/p/vast1/build/spack/lib/spack/spack/spec.py", line 2646, in concretize
    self._new_concretize(tests)
  File "/p/vast1/build/spack/lib/spack/spack/spec.py", line 2619, in _new_concretize
    result = solver.solve([self], tests=tests)
  File "/p/vast1/build/spack/lib/spack/spack/solver/asp.py", line 2114, in solve
    setup_only=setup_only,
  File "/p/vast1/build/spack/lib/spack/spack/solver/asp.py", line 639, in solve
    answers = builder.build_specs(tuples)
  File "/p/vast1/build/spack/lib/spack/spack/solver/asp.py", line 2037, in build_specs
    spack.spec.Spec.ensure_no_deprecated(s)
  File "/p/vast1/build/spack/lib/spack/spack/spec.py", line 2594, in ensure_no_deprecated
    with spack.store.db.read_transaction():
  File "/p/vast1/build/spack/lib/spack/llnl/util/lock.py", line 684, in __enter__
    if self._enter() and self._acquire_fn:
  File "/p/vast1/build/spack/lib/spack/llnl/util/lock.py", line 711, in _enter
    return self._lock.acquire_read(self._timeout)
  File "/p/vast1/build/spack/lib/spack/llnl/util/lock.py", line 423, in acquire_read
    wait_time, nattempts = self._lock(fcntl.LOCK_SH, timeout=timeout)
  File "/p/vast1/build/spack/lib/spack/spack/util/lock.py", line 32, in _lock
    return super(Lock, self)._lock(op, timeout)
  File "/p/vast1/build/spack/lib/spack/llnl/util/lock.py", line 316, in _lock
    .format(lock_type[op]))
llnl.util.lock.LockTimeoutError: Timed out waiting for a read lock.
